--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.h2.console.enabled=true
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.graph.internal=DEBUG #prints entity graphs
